--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "countup": "^1.8.2",
     "formidable": "^3.5.4",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.5",
@@ -32,7 +34,9 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
