--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8",
     "prisma": "^6.8.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
