--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
