--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/nodemailer": "^6.4.17",
+    "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
