--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "countup": "^1.8.2",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.5",
     "next": "15.1.0",
