--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@types/nodemailer": "^6.4.17",
     "@uiw/react-md-editor": "^4.0.7",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
