--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-markdown": "^10.1.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
