--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "next-connect": "^1.0.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.3",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^9.2.1",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
